renamed CSS classes to lowercase as per convention remove the 'data-placeholder' attribute on change call clean() only when pasting 'inline' and 'partial' modes behave as expected use CustomEvent constructor instead of Event auto HR now is added when alt+enter are pressed instead of double enter to avoid cursor jumping

--- a/medium.css
+++ b/medium.css
@@ -1,8 +1,8 @@
-.Medium{
+.medium{
     position: relative;
     }
-.Medium,
-.Medium *{
+.medium,
+.medium *{
     min-height: 1px;
     outline: none;
     resize: none;
@@ -11,22 +11,22 @@
 	box-sizing: border-box;
     }
     
-.Medium p{
+.medium p{
 	position: relative;
 	z-index: 2;
 	}
-    .Medium p:first-child,
-    .Medium .Medium-placeholder + p{
+    .medium p:first-child,
+    .medium .medium-placeholder + p{
         margin-top:0;
         }
-    .Medium p:last-child{
+    .medium p:last-child{
         margin-bottom:0;
         }
-.Medium .Medium-paste-hook{
+.medium .medium-paste-hook{
     position: absolute;
     opacity:0;
     }
-.Medium > *:first-child:empty:before {
+.medium > *:first-child:empty:before {
     content:attr(data-placeholder);
      /*position: absolute;*/
     z-index: 1;
@@ -34,7 +34,7 @@
     color:gray;
     min-height: 1em;
 }
-.Medium .Medium-placeholder{
+/*.medium .medium-placeholder{
 	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
 	filter: alpha(opacity=50);
 	opacity: 0.5;
@@ -42,6 +42,6 @@
     z-index: 1;
     pointer-events: none;
     }
-    .Medium.Medium-rich .Medium-placeholder{
+    .medium.medium-rich .medium-placeholder{
         font-style: italic;
-        }
+        }*/
